# promptress

./: Cargo.toml  README.md
src/: config.rs  main.rs  parts.rs  prompt.rs
src/parts/: dollar.rs  exitcode.rs  git.rs  workdir.rs
src/parts/workdir/: git.rs
