[package]
name = "promptress"
version = "0.2.1"
authors = ["Jasmine Tai <jtai@jtai.ca>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Lightning-fast, customizable terminal prompt"
homepage = "https://github.com/j-tai/promptress"
documentation = "https://github.com/j-tai/promptress/wiki"
repository = "https://github.com/j-tai/promptress"
readme = "README.md"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[dependencies]
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
toml = "0.5.6"
users = "0.10.0"
smallvec = "1.4.2"
termion = "1.5.5"
git2 = { version = "0.13.9", default-features = false }
dirs = "3.0.1"
if_chain = "1.0.0"
