[package]
name = "promptress"
version = "0.2.2"
authors = ["Jasmine Tai <jtai@jtai.ca>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Lightning-fast, customizable terminal prompt"
homepage = "https://github.com/j-tai/promptress"
documentation = "https://github.com/j-tai/promptress/wiki"
repository = "https://github.com/j-tai/promptress"
readme = "README.md"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
toml = "0.5.9"
users = "0.11.0"
smallvec = "1.8.0"
termion = "1.5.6"
git2 = { version = "0.14.4", default-features = false }
dirs = "4.0.0"
if_chain = "1.0.2"
