[package]
name = "promptress"
version = "0.2.2"
authors = ["Jasmine Tai <jtai@jtai.ca>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Lightning-fast, customizable terminal prompt"
homepage = "https://github.com/j-tai/promptress"
documentation = "https://github.com/j-tai/promptress/wiki"
repository = "https://github.com/j-tai/promptress"
readme = "README.md"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
toml = "0.8.10"
uzers = "0.11.3"
smallvec = "1.13.1"
termion = "3.0.0"
git2 = { version = "0.18.2", default-features = false }
dirs = "5.0.1"
if_chain = "1.0.2"
